--- a/style.css
+++ b/style.css
@@ -6,22 +6,37 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #cecece;
+    background-color: #775c03;
     font-family: sans-serif;
 }
 #container {
-    
+    position: relative;
     width: 1450px;
-    margin: 50px auto;   
+    margin: 50px auto; 
+    display: flex;
+    justify-content: center;  
 }
 .itemsContainer {
     width: 30%;
     display: inline-flex;
     margin-left:30px ;
-    height: 440px;
+    height: 540px;
     background-color: #ffff;
     border-radius: 15px;
+    transition: all 0.3s;
 }
+.itemsContainer:hover{
+    width: 30%;
+    display: inline-flex;
+    margin-left:30px ;
+    height: 540px;
+    background-color: #b0e3e8 ;
+    border-radius: 15px;
+    transform: translateY(-20px);
+    
+    
+}
+
 
 .items {
     width: 91%;
@@ -34,7 +49,7 @@ body {
 }
 .items img {
     width: 100%;
-    height: 150px;
+    height: 230px;
 }
 .items h2 {
     font-size: 25px;
@@ -60,6 +75,9 @@ body {
     display: inline-flex;
     border: solid 1px black;
 }
+.itemsColor:hover {
+    cursor: pointer;
+}
 .red{
     background-color: red;
 }
@@ -73,11 +91,19 @@ body {
 }
 .items button{
     position: absolute;
-    right: 10px;
+    right: 0px;
     bottom: 10px;
+    
     width: 130px;
     background-color: rgb(16, 207, 16);
-    height: 40px;
+    height: 45px;
     border-radius: 5px;
+    text-align: center;
     border: none;
+    transition: all 0.3s;
+}
+.items button:hover {
+    cursor: pointer;
+    background-color: rgb(10, 170, 10);
+
 }
